--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>JULiO</title>
+	<title>Juicebox Gallery</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" id="jb-viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1, user-scalable=0" />
 	<meta name="description" content="" />
 
 	<!-- START OPEN GRAPH TAGS-->
-	<meta property="og:title" content="JULiO" />
+	<meta property="og:title" content="Juicebox Gallery" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="" />
 	<meta property="og:image" content="" />
@@ -27,11 +27,53 @@
 	new juicebox({
 		containerId: 'juicebox-container',
 		galleryWidth: '100%',
-		galleryHeight: '100%',
+		galleryHeight: '650px',
 		backgroundColor: 'rgba(34,34,34,1)'
 	});
 	</script>
-	<div id="juicebox-container"></div>
+	<div id="juicebox-container">
+			<!-- Image gallery content for non-javascript devices -->
+			<noscript>
+				<h1></h1>
+				<p></p>
+				<p><img src="images/244898.jpg" title="244898" alt="" /><br>244898 </p>
+				<p><img src="images/244899.jpg" title="244899" alt="" /><br>244899 </p>
+				<p><img src="images/244900.jpg" title="244900" alt="" /><br>244900 </p>
+				<p><img src="images/244901.jpg" title="244901" alt="" /><br>244901 </p>
+				<p><img src="images/244902.jpg" title="244902" alt="" /><br>244902 </p>
+				<p><img src="images/244903.jpg" title="244903" alt="" /><br>244903 </p>
+				<p><img src="images/245157.jpg" title="245157" alt="" /><br>245157 </p>
+				<p><img src="images/245158.jpg" title="245158" alt="" /><br>245158 </p>
+				<p><img src="images/245159.jpg" title="245159" alt="" /><br>245159 </p>
+				<p><img src="images/245160.jpg" title="245160" alt="" /><br>245160 </p>
+				<p><img src="images/245161.jpg" title="245161" alt="" /><br>245161 </p>
+				<p><img src="images/245162.jpg" title="245162" alt="" /><br>245162 </p>
+				<p><img src="images/245295.jpg" title="245295" alt="" /><br>245295 </p>
+				<p><img src="images/245296.jpg" title="245296" alt="" /><br>245296 </p>
+				<p><img src="images/245297.jpg" title="245297" alt="" /><br>245297 </p>
+				<p><img src="images/245298.jpg" title="245298" alt="" /><br>245298 </p>
+				<p><img src="images/245299.jpg" title="245299" alt="" /><br>245299 </p>
+				<p><img src="images/245300.jpg" title="245300" alt="" /><br>245300 </p>
+				<p><img src="images/245462.jpg" title="245462" alt="" /><br>245462 </p>
+				<p><img src="images/245463.jpg" title="245463" alt="" /><br>245463 </p>
+				<p><img src="images/245464.jpg" title="245464" alt="" /><br>245464 </p>
+				<p><img src="images/245465.jpg" title="245465" alt="" /><br>245465 </p>
+				<p><img src="images/245466.jpg" title="245466" alt="" /><br>245466 </p>
+				<p><img src="images/245467.jpg" title="245467" alt="" /><br>245467 </p>
+				<p><img src="images/245575.jpg" title="245575" alt="" /><br>245575 </p>
+				<p><img src="images/245576.jpg" title="245576" alt="" /><br>245576 </p>
+				<p><img src="images/245577.jpg" title="245577" alt="" /><br>245577 </p>
+				<p><img src="images/245578.jpg" title="245578" alt="" /><br>245578 </p>
+				<p><img src="images/245579.jpg" title="245579" alt="" /><br>245579 </p>
+				<p><img src="images/245580.jpg" title="245580" alt="" /><br>245580 </p>
+				<p><img src="images/246184.jpg" title="246184" alt="" /><br>246184 </p>
+				<p><img src="images/246185.jpg" title="246185" alt="" /><br>246185 </p>
+				<p><img src="images/246186.jpg" title="246186" alt="" /><br>246186 </p>
+				<p><img src="images/246188.jpg" title="246188" alt="" /><br>246188 </p>
+				<p><img src="images/246189.jpg" title="246189" alt="" /><br>246189 </p>
+				<p><img src="images/246191.jpg" title="246191" alt="" /><br>246191 </p>
+			</noscript>
+		</div>
 	<!--END JUICEBOX EMBED-->
 </body>
 </html>
